# SWP

./: .client  .client.out  .gitignore  CMakeLists.txt  Makefile  README.md  common.h  communicate.c  communicate.h  crc.c  crc.h  input.c  main.c  receiver.c  receiver.h  receiverUtil.c  receiverUtil.h  sender.c  sender.h  submitprj2  test.sh  util.c  util.h  wang
